--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -69,7 +69,10 @@
           <app-route path="/dashboard/analyze/compare/*" element="aq-analyze-main" bindrouter=""></app-route>
 
           <app-route path="/dashboard/community" element="aq-community-main" bindrouter=""></app-route>
+         
           <app-route path="/dashboard/community/*" element="aq-community-main" bindrouter=""></app-route>
+
+          <app-route path="/dashboard/community/*/*" element="aq-community-main" bindrouter=""></app-route>
 
           <app-route path="/dashboard/createpost" redirect="/dashboard/community/create"></app-route>
 
