--- a/src/components/editor/aq-editor-edit-nonprogrammer-optimizer.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer-optimizer.html
@@ -5,11 +5,15 @@
 
 <dom-module id='aq-nonprogrammer-constraint-item'>
 	<style>
+		
 		input {
 			margin:10px;
-			--height:20px;
-			width:80px;
+			height:25px;
+			width:120px;
+			font-size:13px;
+			padding-left:5px;
 		}
+
 
 		paper-icon-button {
 			--margin-right:10px;
@@ -47,13 +51,17 @@
 			width:135px;
 		}
 
+		#constraint {
+			margin-top:10px;
+		}
+
 	</style>
 
 	<template>
 		<div id= 'constraint' class="layout horizontal">
-			<aq-dropdown id='constraint-type' options="[[constraintOptions]]"></aq-dropdown>
+			<aq-dropdown class="self-center" id='constraint-type' options="[[constraintOptions]]"></aq-dropdown>
 			<div class="gap"></div>
-			<aq-dropdown id='operator-type' options="[[operatorOptions]]"></aq-dropdown>
+			<aq-dropdown class="self-center" id='operator-type' options="[[operatorOptions]]"></aq-dropdown>
 			
 			<div class="gap"></div>
 		    <input>
@@ -114,14 +122,14 @@
 		}
 
 		span {
-			font-size: 13px;
-			margin-left: 10px;
+			font-size: 14px;
+			--margin-left: 10px;
 		}
 
 		.basic {
 			width:30%;
 			margin-right:20px;
-			margin-left:10px;
+			--margin-left:10px;
 		}
 
 		aq-dropdown {
@@ -134,12 +142,21 @@
 			--dropdown-width:250px;
 		}
 
-		paper-button {
-			color:blue;
+		paper-icon-button {
+			margin-left:10px;
+			background-color: teal;
+			color:white;
+			width: 30px;
+			height:30px;
+			padding:5px;
+		}
+
+		paper-icon-button:active {
+			padding:7px;
 		}
 
 		.prg_weights {
-			margin-top: 20px;
+			margin-top: 10px;
 			width: 30%;
 			margin-right: 30px;
 			min-width:300px;
@@ -150,12 +167,32 @@
 			--width:50%;
 		}
 
+		#optType-dd {
+			margin: 10px;
+			margin-left:20px;
+		}
+
+		#header {
+			font-size: 14px;
+		}
+
+		paper-radio-group {
+			font-size: 14px;
+		}
+
+		#constraintContainer {
+			margin-top:10px;
+		}
+
 	</style>
 
 	<template>	
-		<div id='container'>			
-			<span>Pick the optimizer</span>
-			<aq-dropdown id ='optType-dd' options="[[optimizerOptions]]"></aq-dropdown>
+		<div id='container'>		
+		<p id="header">Combine the stocks screened to create a portfolio. For ex: Combine the stocks in <b><i>proportion of market capitilization</i></b></p>	
+			<div class="layout horizontal">
+				<span class="self-center">Pick the optimizer:</span>
+				<aq-dropdown id ='optType-dd' options="[[optimizerOptions]]"></aq-dropdown>
+			</div>
 		
 			<iron-pages selected="{{optimizationType}}">
 
@@ -181,16 +218,16 @@
 								<div><span>Select the horizon of historical standard deviation
 								</span></div>
 								<div>
-									<paper-radio-group>
-										<paper-radio-button toggles name="1month">1 Month
+									<paper-radio-group noink>
+										<paper-radio-button toggles name="1 month">1 Month
 										</paper-radio-button>
-										<paper-radio-button  toggles name="3months">3 Month
+										<paper-radio-button  toggles name="3 months">3 Month
 										</paper-radio-button>
-										<paper-radio-button  toggles name="6months">6 months
+										<paper-radio-button  toggles name="6 months">6 months
 										</paper-radio-button>
-										<paper-radio-button  toggles name="1year">1 year
+										<paper-radio-button  toggles name="1 year">1 year
 										</paper-radio-button>
-										<paper-radio-button  toggles name="2year">2 year
+										<paper-radio-button  toggles name="2 year">2 year
 										</paper-radio-button>
 									</paper-radio-group>
 								</div>		
@@ -201,16 +238,16 @@
 					<template is='dom-if' if='{{isNormalizedMomentum(weightScheme)}}'>
 						<div class="layout vertical prg_horizon">
 							<div><span>Select the horizon for momentum</span></div>
-								<paper-radio-group>
-									<paper-radio-button toggles name="1month">1 Month
+								<paper-radio-group noink>
+									<paper-radio-button toggles name="1 month">1 Month
 									</paper-radio-button>
-									<paper-radio-button  toggles name="3months">3 Month
+									<paper-radio-button  toggles name="3 months">3 Month
 									</paper-radio-button>
-									<paper-radio-button  toggles name="6months">6 months
+									<paper-radio-button  toggles name="6 months">6 months
 									</paper-radio-button>
-									<paper-radio-button  toggles name="1year">1 year
+									<paper-radio-button  toggles name="1 year">1 year
 									</paper-radio-button>
-									<paper-radio-button  toggles name="2year">2 year
+									<paper-radio-button  toggles name="2 year">2 year
 								</paper-radio-button>
 							</paper-radio-group>
 						</div>	
@@ -219,26 +256,26 @@
 
 				</div>
 
-				<div class="layout vertical">
+				<div class="layout vertical prg_horizon">
 					<span>Select the horizon of historical standard deviation</span>
-					<paper-radio-group selected name="1month">
-						<paper-radio-button toggles name="1month">1 Month
+					<paper-radio-group noink selected name="1 month">
+						<paper-radio-button toggles name="1 month">1 Month
 						</paper-radio-button>
-						<paper-radio-button  toggles name="3months">3 Month
+						<paper-radio-button  toggles name="3 months">3 Month
 						</paper-radio-button>
-						<paper-radio-button  toggles name="6months">6 months
+						<paper-radio-button  toggles name="6 months">6 months
 						</paper-radio-button>
-						<paper-radio-button  toggles name="1year">1 year
+						<paper-radio-button  toggles name="1 year">1 year
 						</paper-radio-button>
-						<paper-radio-button  toggles name="2year">2 year
+						<paper-radio-button  toggles name="2 year">2 year
 						</paper-radio-button>
 					</paper-radio-group>	
 
-					<div class="layout horizontal">
-						<span>Want to add constaints?</span>
-						<paper-button on-tap='addConstraints'><iron-icon icon="icons:add"></iron-icon>
-							Add Constraints
-						</paper-button>
+					<div id="constraintContainer">
+						<div class="layout horizontal">
+							<span class="self-center">Want to add constaints?</span>
+							<paper-icon-button noink class="self-center" on-tap='addConstraints' icon="icons:add"></paper-icon-button>
+						</div>
 					</div>
 
 				</div>
@@ -248,7 +285,7 @@
 
 	<script>
 
-		var optimizerOptions = [{value:'Weighted Portfolio',index:0},{value:'Minimize Absolute Deviation',index:1}];//,{value:'Mean Variance Optimization',index:2}];
+		var optimizerOptions = [{value:'Weighted Portfolio',index:0},{value:'Minimize Absolute Deviation',index:1},{value:'Minimize Absolute Semi-Deviation',index:2},{value:'Minimize "Maximum" Loss',index:3}]
 
 		var weightedPortOptions = [{value:'Uniform Weighting',index:1},{value:'Market Capitalization',index:2},{value:'Cube Root Market Capitalization',index:3},{value:'Reverse Volatility',index:4},{value:'Normalized Momentum',index:5}];
 
@@ -281,8 +318,8 @@
 				console.log('i am here');
 				var x = document.createElement('aq-nonprogrammer-constraint-item');
 				console.log(x);
-				console.log(this.$.constraintcontainer);
-				Polymer.dom(this.$.constraintcontainer).appendChild(x);
+				console.log(this.$.constraintContainer);
+				Polymer.dom(this.$.constraintContainer).appendChild(x);
 			},
 
 			onDropdownChange(e) {
@@ -294,7 +331,6 @@
 			},
 
 			isReverseVolatility(weightScheme) {
-				//console.log(weightScheme);
 				return weightScheme == 4;
 			},
 
