--- a/src/components/user/aq-user-login-panel.html
+++ b/src/components/user/aq-user-login-panel.html
@@ -12,11 +12,25 @@
     <style is="custom-style" include="iron-flex iron-positioning"></style>
     <style>
 
+        paper-card {
+            width:370px;
+            --margin-top:100px;
+            --color:white;
+            margin:auto 0;
+            z-index: 2;
+            --background-color: #333a56;
+            opacity: 2 !important;
+        }
+
         #container {
-            width: 370px;
+            width: 100%;
             margin: 0 auto;
-            padding-top: 50px;
-            margin-top: 50px;
+            --padding-top: 50px;
+            --margin-top: 50px;
+            background-color: #333b56;
+            --height:100%;
+            --margin-top: -30px;
+            --opacity: 0.5;
         }
 
         .dialog-fields {
@@ -64,7 +78,12 @@
         }
 
         .footer {
-            margin-top: 2em;
+            --margin-top: 10px;
+            margin-bottom: 30px;
+        }
+
+        .footer a {
+            margin-left: 5px;
         }
 
         #tclabel {
@@ -76,8 +95,8 @@
     </style>
 
     <template>
-        <div id='container' class="layout vertical center-justified flex">
-            <paper-card heading="{{aRsrc.headerText}}">
+        <div id='container' class="layout vertical fit">
+            <paper-card class="self-center" heading="{{aRsrc.headerText}}">
 
                 <div class="dialog-fields" class="layout vertical">
 
@@ -172,8 +191,6 @@
                             </a>
                         </div>
 
-                        <paper-checkbox noink checked?="{{rememberMe}}"></paper-checkbox>
-                        <span>Remember Me</span>
                     </template>
                     <iron-ajax
                       url="http://localhost:3002/api/v2/user/login"
@@ -186,17 +203,17 @@
                       debounce-duration="300">
                     </iron-ajax>
 
-
+                   
                     <paper-button raised class="loginButton center-justified horizontal layout" on-tap="onInvokeAction">{{actionButtonLabel}}
                     </paper-button>
 
                 </div>
-            </paper-card>
-
+            
             <div class="footer center-justified horizontal layout">{{aRsrc.footerText}}
                 <a href="javascript:void(0);" on-tap="onFooterLinkTap">{{aRsrc.footerLinkText}}
                 </a>
             </div>
+            </paper-card>
 
         </div>
         <iron-localstorage
