--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -36,39 +36,39 @@
   
   <template>
     
-    <iron-ajax
-        auto
-        url="http://localhost:3002/api/v2/thread/{{threadid}}"
-        method='GET'
-        id='thread'
-        handle-as="json"
-        on-response="onAllThreads"
-        headers='{{header}}'
-        debounce-duration="300">
-  </iron-ajax>
+      <iron-ajax
+          auto
+          url="http://localhost:3002/api/v2/thread/{{threadid}}"
+          method='GET'
+          id='thread'
+          handle-as="json"
+          on-response="onAllThreads"
+          headers='{{header}}'
+          debounce-duration="300">
+      </iron-ajax>
 
-  <template is="dom-if" if="{{threadDetails}}">
-    <div id='container'>
-      
-      <div class="goBackButton layout horizontal">
-        <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack"></paper-icon-button>
-        <div class="flex"><h3>Back to community</h3></div>
-      </div>
-      
-      <aq-community-postdetail-header
-        post-header='{{threadDetails}}'>
-      </aq-community-postdetail-header>
-      
-      <div id="replyContainer">
-        <template is="dom-repeat" items="{{threadDetails.replies}}">
-          <aq-community-postdetail-content item="{{item}}"></aq-community-postdetail-content>
-        </template>
-      </div>
-      
+      <template is="dom-if" if="{{threadDetails}}">
+        <div id='container'>
+          
+          <div class="goBackButton layout horizontal">
+            <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack"></paper-icon-button>
+            <div class="flex"><h3>Back to community</h3></div>
+          </div>
+          
+          <aq-community-postdetail-header
+            post-header='{{threadDetails}}'>
+          </aq-community-postdetail-header>
+          
+          <div id="replyContainer">
+            <template is="dom-repeat" items="{{threadDetails.replies}}">
+              <aq-community-postdetail-content item="{{item}}"></aq-community-postdetail-content>
+            </template>
+          </div>
+          
 
-      <aq-community-postdetail-reply id="replyEditor" threadid={{threadDetails._id}}></aq-community-postdetail-reply>
-    </div>
-  </template>
+          <aq-community-postdetail-reply id="replyEditor" threadid={{threadDetails._id}}></aq-community-postdetail-reply>
+        </div>
+      </template>
 
   </template>
 
@@ -118,8 +118,8 @@
         
         replyElement.item = reply;
 
-        Polymer.dom(this.$.replyContainer).appendChild(replyElement);
-        this.$.replyEditor.clearEditor();
+        this.$$("#replyContainer").appendChild(replyElement);
+        this.$$("#replyEditor").clearEditor();
       }
 
     });
